--- a/deux.html
+++ b/deux.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h6>Bonjour de la branche DEUX !!</h6>
+        <h1>On corrige le ubg ...<h1>
     </body>
 </html>
