--- a/conflict.html
+++ b/conflict.html
@@ -1,3 +1,4 @@
 This is a line from github
 I want this REMOTE line here
 I want this LOCAL line here but mput here so that no conflict
+ALBATOR !!!
